--- a/client/manifest.json
+++ b/client/manifest.json
@@ -2,12 +2,12 @@
     "name": "Tutoriel PWA Notifications Push",
     "icons": [
       {
-        "src": "/icons/512.png",
+        "src": "/img/icons/512.png",
         "type": "image/png",
         "sizes": "512x512"
       },
       {
-        "src": "/icons/192.png",
+        "src": "/img/icons/192.png",
         "type": "image/png",
         "sizes": "192x192"
       }
