--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
     "nodemon": "^2.0.20",
+    "sqlite3": "^5.1.2",
     "web-push": "^3.3.3"
   }
 }
