--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "body-parser": "^1.18.3",
     "dotenv": "^6.2.0",
     "express": "^4.16.4",
+    "localforage": "^1.10.0",
     "nodemon": "^2.0.20",
     "sqlite3": "^5.1.2",
     "web-push": "^3.3.3"
